<resources>
    <string name="app_name">Constraint Layout</string>
    <string name="place_holder">background image</string>
    <string name="upload_button">Upload</string>
    <string name="discard_button">Discard</string>
    <string name="camera" translatable="false">Camera</string>
    <string name="camera_value">Leica M Typ 240</string>
    <string name="settings_value">f/4 16s ISO 200</string>
    <string name="settings">Settings</string>
    <string name="image_header">Nature</string>
    <string name="image_description">This is info</string>
    <string name="fav_image_description">Make image fav</string>
    <string name="settings_hint">Model Settings</string>
    <string name="camera_hint">Model Number</string>
</resources>